# telemetryhub

./: .editorconfig  .gitignore  BRANCH_CLEANUP_GUIDE.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  FIX_DAY19_ISSUE.md  IMPLEMENTATION_SUMMARY.md  INTERVIEW_DOCS_MIGRATION_PLAN.md  LICENSE  PROJECT_BOUNDARIES.md  Pre_Interview_Feedback.md  RELEASE_NOTES_v6.0.0.md  RELEASE_NOTES_v6.4.0.md  RELEASE_v6.3.0.md  ReadMe.md  SECURITY.md  TASKS_COMPLETED_JAN1_PART2.md  cleanup_branches.ps1  cleanup_hub_personal_files.ps1  cleanup_remote_branches.ps1  cleanup_telemetry_platform.ps1  commit_changes.ps1  docker-compose-integrated.yml  docker-compose.yml  final_branch_cleanup.ps1  migrate_hub_to_hubdev.ps1  migrate_platform_to_dev.ps1  organize_repo.ps1  preview_branch_cleanup.ps1  quick_cleanup.ps1  readme.md  run_copilot_fix.ps1  test.txt  verify_platform_migration.ps1
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance_issue.yml  question.yml
.github/workflows/: benchmark.yml  cpp-ci.yml  windows-ci.yml
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
_codeql_build_dir/device/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/gateway/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gateway_app
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cloud_client_tests  cmake_install.cmake  test_gateway_e2e  unit_tests
_codeql_build_dir/tools/: CTestTestfile.cmake  Makefile  cmake_install.cmake  device_smoke  device_state_test  queue_smoke  raii_demo
cmake/: FASTBuild.cmake  GetGit.cmake
device/: CMakeLists.txt
device/include/telemetryhub/: Version.h  Version.h.in
device/include/telemetryhub/device/: BusInterface.h  Device.h  DeviceUtils.h  FileHandle.h  I2CBus.h  SPIBus.h  SerialPortSim.h  TelemetrySample.h  TelemetryUtils.h
device/src/: Device.cpp  FileHandle.cpp  SerialPortSim.cpp
docs/: ACTION_ITEMS_JAN2026.md  ARCHIVE_ORGANIZATION_GUIDE.md  CACHE_LINE_FALSE_SHARING.md  CHANGELOG.md  CI_CD_OPTIMIZATIONS.md  CODE_COVERAGE_AND_SECURITY_STRATEGY.md  CODE_FLOW_INTERVIEW_GUIDE.md  COMMAND_PATTERN_ANALYSIS.md  COMPONENT_INTERACTIONS_PATTERNS.md  CONTRIBUTING.md  COPILOT_PR_PARTICIPANT_EXPLAINED.md  DAILY_SUMMARY_JAN_02_2026.md  EDGE_COMPUTING_ANALYSIS.md  EMBEDDED_SKILLS_IN_BACKEND.md  FIX_COPILOT_ATTRIBUTION.md  FUTURE_WORK.md  GITHUB_CLEANUP_SOLUTIONS.md  GITHUB_SECURITY_SETUP_GUIDE.md  GITHUB_VISIBILITY_STRATEGY.md  GITHUB_WIKI_HOME.md  GRAFANA_SETUP_GUIDE.md  HUB_E2E_TESTING_TODAY.md  INDUSTRY_DESIGN_PATTERNS.md  MASTER_TODO_TECHNICAL_DEBT.md  MORNING_STATUS_JAN2_2026.md  MULTITHREADING_ARCHITECTURE_DIAGRAM.md  PERFORMANCE.md  PROJECT_STATUS.md  PROJECT_STRATEGY.md  QT_GUI_ENHANCEMENT_PLAN.md  QUICK_REFERENCE_TelemetryTaskProcessor.md  RELEASE_v6.1.0.md  REPOSITORY_STATUS_JAN2026.md  REPOSITORY_STRUCTURE.md  SECURITY.md  SENIOR_TO_ARCHITECT_JOURNEY_2025.md  SprintBoard.md  TASKS_SUMMARY_REPO_ORG.md  TECHNICAL_DEBT_TRACKER.md  TelemetryHub_Overview.md  (+57 more)
docs/archives/career-preparation/: README.md  SESSION_SUMMARY_2025_12_31.md  amaresh_career_context.md  cover_letter_booking_backend_engineer.md  cover_letter_kubota_sensor_engineer.md  cv_improvement_guide_amaresh.md  day19_cv_recommendations.md  day19_interaction_log.md  day19_interview_guidance.md  linkedin_about_natural.md  linkedin_about_section.md  linkedin_job_search_strategy.md  telemetrytaskprocessor_reframe_plan.md
docs/daily-summaries/: 2026-01-03-DAILY_SUMMARY.md
docs/mermaid/: Control flow_day10.mmd  Control flow_day12.mmd  Device Communication_day16.mmd  High level diagram flowchart.mmd  High level diagram_day10.mmd  High level diagram_day12.mmd  High level diagram_day16.mmd  Telemetry Path-day05.mmd  Telemetry Path.mmd  Telemetry Path_day10.mmd  Telemetry Path_day12.mmd  day18_circuit_breaker_flow.mmd  day18_failure_recovery.mmd  day18_state_machine.mmd  integration_architecture.md
docs/mermaid/day16/: sequenceDiagram.mmd
docs/mermaid/to_verify_day05/: Control flow-day05.mmd  High level diagram day05.mmd  Telemetry Path-day05.mmd
docs/mermaid/version1 day05/: Control flow-day05.mmd  High level diagram day05.mmd
docs/technical-notes/: day01_notes.md  day03_notes.md  day06_notes.md  day07_notes.md  day09_notes.txt  day11_extension_notes.md  day12_notes.md  day14_notes.md  day15_notes.md
docs/week01/: architecture_week1.md  week01_status_note.md
examples/: README.md  basic_usage.cpp  bus_comparison_example.cpp  custom_config.ini  rest_client_example.py
gateway/: CMakeLists.txt
gateway/include/telemetryhub/gateway/: Config.h  GatewayCore.h  ICloudClient.h  Log.h  RedisPublisher.h  RestCloudClient.cpp  RestCloudClient.h  TelemetryQueue.h  ThreadPool.h
gateway/src/: Config.cpp  GatewayCore.cpp  RestCloudClient.cpp  TelemetryQueue.cpp  ThreadPool.cpp  http_config.h  http_server.cpp  main_gateway.cpp
gui/: CMakeLists.txt
gui/src/: MainWindow.cpp  MainWindow.h  RestClient.cpp  RestClient.h  main_gui.cpp
include/telemetryhub/: version.hpp.in
scripts/: build-utils.ps1  cleanup_github_forks.ps1  cleanup_local_branches.ps1  configure_fbuild.ps1  diagnose_build_badge.ps1  finalize_migration.ps1  migrate_interview_docs.ps1  quick_cleanup_platform.ps1  repo-utils.ps1  verify_pattern_b_consistency.ps1
tests/: CMakeLists.txt  cloud_client_tests.cpp  log_check.cmake  mock_cloud_client.h  test_bounded_queue.cpp  test_config.cpp  test_device.cpp  test_gateway_e2e.cpp  test_queue.cpp  test_robustness.cpp  test_serial_port_sim.cpp
tests/scripts/: http_integration.ps1
tools/: CMakeLists.txt  DeviceUtils.h  clean_reconfigure.ps1  device_simulator_cli.cpp  device_smoke.cpp  device_state_test.cpp  finalize_telemetrytaskprocessor.ps1  perf_tool.cpp  queue_smoke.cpp  raii_demo.cpp  rename_distqueue_to_telemetrytaskprocessor.ps1  render_mermaid.ps1  run_gui.ps1  stress_test.cpp  verify_telemetrytaskprocessor.ps1
